kotlin-ide/idea/testData/multiplatform/weaklyIncompatibleActualInIntermediateModule/middle/middle.kt
package sample

actual class <!LINE_MARKER("descr='Has declaration in common module'"), NO_ACTUAL_CLASS_MEMBER_FOR_EXPECTED_CLASS!>A<!> {
}